--- a/frontend/styles/scss/style.scss
+++ b/frontend/styles/scss/style.scss
@@ -112,6 +112,9 @@ body {
 
       #mini-result {
         padding: 5px 10px;
+        .true {
+          background: #90d984;
+        }
       }
     }
   }
