--- a/frontend/styles/css/style.css
+++ b/frontend/styles/css/style.css
@@ -39,11 +39,49 @@ body {
         body .container .memory-block .memory #memoryTable td {
           text-align: center; }
         body .container .memory-block .memory #memoryTable td[data-val="1"] {
-          background: #bd6460; }
+          background: #bd9f9f; }
+        body .container .memory-block .memory #memoryTable td[data-val="2"] {
+          background: #cc9394; }
+        body .container .memory-block .memory #memoryTable td[data-val="3"] {
+          background: #cc746f; }
+        body .container .memory-block .memory #memoryTable td[data-val="4"] {
+          background: #cc5652; }
+        body .container .memory-block .memory #memoryTable td[data-val="5"] {
+          background: #cc352d; }
+        body .container .memory-block .memory #memoryTable td[data-val="6"] {
+          background: #dd0a07; }
+        body .container .memory-block .memory #memoryTable td[data-val="7"],
+        body .container .memory-block .memory #memoryTable td[data-val="8"],
+        body .container .memory-block .memory #memoryTable td[data-val="9"],
+        body .container .memory-block .memory #memoryTable td[data-val="10"],
+        body .container .memory-block .memory #memoryTable td[data-val="11"],
+        body .container .memory-block .memory #memoryTable td[data-val="12"],
+        body .container .memory-block .memory #memoryTable td[data-val="13"],
+        body .container .memory-block .memory #memoryTable td[data-val="14"] {
+          background: #ff0a07; }
         body .container .memory-block .memory #memoryTable td[data-val="0"] {
           background: #bdbdbd; }
         body .container .memory-block .memory #memoryTable td[data-val="-1"] {
-          background: #6566bd; }
+          background: #a4a5bd; }
+        body .container .memory-block .memory #memoryTable td[data-val="-2"] {
+          background: #918ebd; }
+        body .container .memory-block .memory #memoryTable td[data-val="-3"] {
+          background: #7272bd; }
+        body .container .memory-block .memory #memoryTable td[data-val="-4"] {
+          background: #514dbd; }
+        body .container .memory-block .memory #memoryTable td[data-val="-5"] {
+          background: #2d2cbd; }
+        body .container .memory-block .memory #memoryTable td[data-val="-6"] {
+          background: #00017b; }
+        body .container .memory-block .memory #memoryTable td[data-val="-7"],
+        body .container .memory-block .memory #memoryTable td[data-val="-8"],
+        body .container .memory-block .memory #memoryTable td[data-val="-9"],
+        body .container .memory-block .memory #memoryTable td[data-val="-10"],
+        body .container .memory-block .memory #memoryTable td[data-val="-11"],
+        body .container .memory-block .memory #memoryTable td[data-val="-12"],
+        body .container .memory-block .memory #memoryTable td[data-val="-13"],
+        body .container .memory-block .memory #memoryTable td[data-val="-14"] {
+          background: #000130; }
     body .container .memory-block .preview {
       float: right;
       width: 15px;
